@@ -1,3 +1,8 @@
+2010-07-16 Gonzalo Paniagua Javier <gonzalo@novell.com>
+
+	* src/gmisc-unix.c: include config.h. Fixes bug #609632.
+	Use getpwuid_r instead of getpwent_r.
+
 2010-07-02  Zoltan Varga  <vargaz@gmail.com>
 
 	* src/glib.h: Define gboolean as int32_t to match mono_bool.
